--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ Table of Contents
 4. Header
 5. Footer
 6. Media Queries
+7. Elements
 */
 /* 1. Variables =================== */
 /* 2. Reset ======================= */
@@ -171,5 +172,72 @@ video {
 }
 
 /* 6. Media Queries =============== */
+/* 7. Elements =============== */
+.filter-rent-and-buy {
+  width: 100%;
+}
+
+.category-top {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.category-top p {
+  font-size: 12px;
+}
+
+.category-image {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+}
+.category-image div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.category-image img {
+  border-radius: 100%;
+  width: 5rem;
+  height: 5rem;
+}
+.category-image p {
+  width: 5rem;
+  font-size: 10px;
+  justify-content: center;
+  text-align: center;
+}
+
+.tab-buttons {
+  display: flex;
+  background-color: #f0f0f0;
+  border-radius: 25px;
+  padding: 5px;
+  width: 15rem;
+  margin: 20px auto;
+}
+
+.tab-buttons button {
+  border: none;
+  background: none;
+  padding: 10px 30px;
+  font-size: 16px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.tab-buttons button.active {
+  background-color: white;
+  font-weight: bold;
+  color: black;
+}
+
+.tab-buttons button:not(.active) {
+  color: #888;
+}
 
 /*# sourceMappingURL=style.css.map */
