--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,8 +177,71 @@ video {
 
 /* 6. Media Queries =============== */
 /* 7. Elements =============== */
-
 .filter-rent-and-buy {
+  width: 100%;
+}
+
+.category-top {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.category-top p {
+  font-size: 12px;
+}
+
+.category-image {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+}
+.category-image div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.category-image img {
+  border-radius: 100%;
+  width: 5rem;
+  height: 5rem;
+}
+.category-image p {
+  width: 5rem;
+  font-size: 10px;
+  justify-content: center;
+  text-align: center;
+}
+
+.tab-buttons {
+  display: flex;
+  background-color: #f0f0f0;
+  border-radius: 25px;
+  padding: 5px;
+  width: 15rem;
+  margin: 20px auto;
+}
+
+.tab-buttons button {
+  border: none;
+  background: none;
+  padding: 10px 30px;
+  font-size: 16px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.tab-buttons button.active {
+  background-color: white;
+  font-weight: bold;
+  color: black;
+}
+
+.tab-buttons button:not(.active) {
+  color: #888;
   width: 100%;
 }
 
@@ -319,8 +382,4 @@ video {
 }
 .listings .section-header a:hover {
   text-decoration: underline;
-}
-
-
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
