--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,21 +177,18 @@ video {
 
 /* 6. Media Queries =============== */
 /* 7. Elements =============== */
-
 .filter-rent-and-buy {
   width: 100%;
 }
-
-.category-top {
+.filter-rent-and-buy .category-top {
   display: flex;
   justify-content: space-between;
   margin: 10px;
 }
-.category-top p {
+.filter-rent-and-buy .category-top p {
   font-size: 12px;
 }
-
-.category-image {
+.filter-rent-and-buy .category-image {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
@@ -199,24 +196,23 @@ video {
   text-align: center;
   margin: 10px;
 }
-.category-image div {
+.filter-rent-and-buy .category-image div {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.category-image img {
+.filter-rent-and-buy .category-image img {
   border-radius: 100%;
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
 }
-.category-image p {
+.filter-rent-and-buy .category-image p {
   width: 5rem;
   font-size: 10px;
   justify-content: center;
   text-align: center;
 }
-
-.tab-buttons {
+.filter-rent-and-buy .tab-buttons {
   display: flex;
   background-color: #f0f0f0;
   border-radius: 25px;
@@ -224,8 +220,7 @@ video {
   width: 15rem;
   margin: 20px auto;
 }
-
-.tab-buttons button {
+.filter-rent-and-buy .tab-buttons button {
   border: none;
   background: none;
   padding: 10px 30px;
@@ -234,15 +229,90 @@ video {
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
 }
-
-.tab-buttons button.active {
+.filter-rent-and-buy .tab-buttons button.active {
   background-color: white;
   font-weight: bold;
   color: black;
 }
-
-.tab-buttons button:not(.active) {
+.filter-rent-and-buy .tab-buttons button:not(.active) {
   color: #888;
+}
+
+.profile-header .profile-background img {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
+.profile-header .profile-info {
+  display: flex;
+  margin-left: 1rem;
+}
+.profile-header .profile-info .profile-img {
+  flex-shrink: 0;
+  margin-top: -50px;
+}
+.profile-header .profile-info img {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+}
+.profile-header .rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  margin: 0.8rem 0;
+  font-size: 0.9rem;
+  background-color: rgba(255, 215, 0, 0.3);
+  border-radius: 15px;
+  padding: 0.3rem 0;
+}
+.profile-header .rating .star {
+  color: #FFD700;
+}
+.profile-header .user-details {
+  margin: 0.5rem auto auto 0.8rem;
+}
+.profile-header .user-details h3 {
+  font-size: 1.3rem;
+}
+.profile-header .user-details p {
+  font-size: 0.9rem;
+}
+.profile-header .user-details .user-stats {
+  display: flex;
+  gap: 1rem;
+  margin-top: 0.5rem;
+}
+.profile-header .profile-more-btn {
+  margin: 0.3rem 1rem;
+  font-size: 1.2rem;
+}
+.profile-header .profile-btns {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: nowrap;
+  max-width: 600px;
+  margin: 1rem auto;
+  font-size: 0.9rem;
+  justify-content: center;
+}
+.profile-header .profile-btns button {
+  padding: 0.3rem;
+  border: 1px solid black;
+  background: #f0f0f0;
+  border-radius: 12px;
+  cursor: pointer;
+  text-align: center;
+  flex-shrink: 1;
+}
+.profile-header .profile-btns .edit {
+  flex: 0 0 calc(40% - 0.25rem);
+}
+.profile-header .profile-btns .insight,
+.profile-header .profile-btns .contract {
+  flex: 0 0 calc(20% - 0.25rem);
 }
 
 /* 8. Cards ======================= */
@@ -320,7 +390,5 @@ video {
 .listings .section-header a:hover {
   text-decoration: underline;
 }
-
-
 
 /*# sourceMappingURL=style.css.map */
