--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -2,23 +2,22 @@
 
 
     <div class="filter-rent-and-buy">
-  
+
       <div class="tab-buttons">
         <button id="buyingBtn" class="active">Buying</button>
         <button id="rentingBtn">Renting</button>
-        <!-- <form action="/buying" method="get" style="display: inline;">
-          <button type="submit" id="buyingBtn">Buying</button>
-        </form>
-  
-        <form action="/renting" method="get" style="display: inline;">
-          <button type="submit" id="rentingBtn">Renting</button>
-        </form> -->
       </div>
-  
+
       <div class="category-box">
         <div class="category-top">
-          <p>Categories</p>
-          <p><a href="/">See all categories</a></p>
+          <h3>Categories</h3>
+          <p>
+            <% if(content === "buying") { %>
+            <a id="link" href="/buying-page">See all categories</a>
+            <% } else { %>
+            <a id="link" href="/renting-page">See all categories</a>
+            <% } %>
+          </p>
         </div>
         <div class="category-image">
           <div>
@@ -37,12 +36,12 @@
             <img src="https://picsum.photos/300/300" alt="Beauty & Personal Care">
             <p>Beauty & Personal Care</p>
           </div>
-  
+
         </div>
       </div>
-  
+
     </div>
-  
+
     <div id="content">
       <% if (content === 'buying') { %>
       <h3>buying content</h3>
@@ -52,54 +51,3 @@
 
       <%- include('hs', { items }) %>
     </div>
-=======
-<div class="filter-rent-and-buy">
-
-  <div class="tab-buttons">
-    <button id="buyingBtn" class="active">Buying</button>
-    <button id="rentingBtn">Renting</button>
-    <!-- <form action="/buying" method="get" style="display: inline;">
-      <button type="submit" id="buyingBtn">Buying</button>
-    </form>
-
-    <form action="/renting" method="get" style="display: inline;">
-      <button type="submit" id="rentingBtn">Renting</button>
-    </form> -->
-  </div>
-
-  <div class="category-box">
-    <div class="category-top">
-      <p>Categories</p>
-      <p><a href="/">See all categories</a></p>
-    </div>
-    <div class="category-image">
-      <div>
-        <img src="https://picsum.photos/300/300" alt="Electronics & Gadgets">
-        <p>Electronics & Gadgets</p>
-      </div>
-      <div>
-        <img src="https://picsum.photos/300/300" alt="Fashion & Apparel">
-        <p>Fashion & Apparel</p>
-      </div>
-      <div>
-        <img src="https://picsum.photos/300/300" alt="Home & Furniture">
-        <p>Home & Furniture</p>
-      </div>
-      <div>
-        <img src="https://picsum.photos/300/300" alt="Beauty & Personal Care">
-        <p>Beauty & Personal Care</p>
-      </div>
-
-    </div>
-  </div>
-
-</div>
-
-<div id="content">
-  <% if (content === 'buying') { %>
-  <h3>buying content</h3>
-  <% } else { %>
-  <h3>renting content</h3>
-  <% } %>
-</div>
-
