--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -21,19 +21,19 @@
         </div>
         <div class="category-image">
           <div>
-            <img src="https://picsum.photos/300/300" alt="Electronics & Gadgets">
+            <a href="/"><img src="https://picsum.photos/300/300" alt="Electronics & Gadgets"></a>
             <p>Electronics & Gadgets</p>
           </div>
           <div>
-            <img src="https://picsum.photos/300/300" alt="Fashion & Apparel">
+            <a href="/"><img src="https://picsum.photos/300/300" alt="Fashion & Apparel"></a>
             <p>Fashion & Apparel</p>
           </div>
           <div>
-            <img src="https://picsum.photos/300/300" alt="Home & Furniture">
+            <a href="/"><img src="https://picsum.photos/300/300" alt="Home & Furniture"></a>
             <p>Home & Furniture</p>
           </div>
           <div>
-            <img src="https://picsum.photos/300/300" alt="Beauty & Personal Care">
+            <a href="/"><img src="https://picsum.photos/300/300" alt="Beauty & Personal Care"></a>
             <p>Beauty & Personal Care</p>
           </div>
 
