--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -42,11 +42,11 @@
       </div>
     </div>
 
-    <div class="profile-more-btn">
+    <!-- <div class="profile-more-btn">
       <button id="profile-more">
         <i class="fas fa-ellipsis-h"></i>
       </button>
-    </div>
+    </div> -->
 
   </div>
 
