--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,7 +10,7 @@ Table of Contents
 8. Cards
 9. Grid Layout
 10. Content
-
+11. Reviews
 */
 
 /* 1. Variables =================== */
@@ -43,3 +43,5 @@ Table of Contents
 /* 10. Content ================= */
 @import "layout/content";
 
+/* 11. Reviews =================== */
+@import "components/reviews";
