--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -145,3 +145,30 @@
   color: #888;
 }
 
+.logout-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5rem;
+
+  .logout-btn {
+    background-color: $color-primary;
+    color: $color-white;
+    border: none;
+    padding: 0.6rem 1.2rem;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    width: 200px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    &:hover {
+      background-color: $color-primary-light;
+    }
+  }
+}
+
