--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,5 +1,7 @@
 $color-background: white;
 $color-primary: #556C40;
+$color-primary-light: #8D9D7F;
+$color-line: #CFCFCF;
 $color-text: black;
 $color-white: white;
 
