--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -24,3 +24,25 @@
     }
   }
 }
+
+.profile-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-top: 2rem;
+  
+
+  .action-link {
+    font-size: 1rem;
+    color: $color-text;
+    text-decoration: none;
+    background-color: $color-white;
+    padding: 0.6rem 1.2rem;
+    border-radius: 6px;
+    width: 200px;
+    text-align: center;
+    border-top: 1px solid $color-line;
+
+  }
+}
