--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,14 +1,19 @@
 <% layout('layout') %>
 
 
-<div class="profile-actions">
-
-    <a href="/orders" class="action-link"> Order </a>
-
-    <a href="/bookmarks" class="action-link"> Bookmark </a>
-
-    <a href="/settings" class="action-link"> Settings </a>
-
+<div class="profile-settings-card">
+  <a href="/orders" class="profile-setting-link">
+    <span>Orders</span>
+    <i class="fa-solid fa-chevron-right"></i>
+  </a>
+  <a href="/bookmarks" class="profile-setting-link">
+    <span>Bookmark</span>
+    <i class="fa-solid fa-chevron-right"></i>
+  </a>
+  <a href="/settings" class="profile-setting-link">
+    <span>Settings</span>
+    <i class="fa-solid fa-chevron-right"></i>
+  </a>
 </div>
 
 <div class="logout-section">
