--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -148,26 +148,19 @@
 .logout-section {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-top: 1.5rem;
+  margin: 2rem 0;
 
   .logout-btn {
-    background-color: $color-primary;
-    color: $color-white;
+    background-color: #5b6d45;
+    color: white;
     border: none;
-    padding: 0.6rem 1.2rem;
+    padding: 0.8rem 2rem;
     font-size: 1rem;
-    border-radius: 6px;
+    border-radius: 8px;
     cursor: pointer;
-    width: 200px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    
     &:hover {
-      background-color: $color-primary-light;
+      background-color: #495837;
     }
   }
 }
