--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -25,24 +25,28 @@
   }
 }
 
-.profile-actions {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1rem;
-  margin-top: 2rem;
-  
+.profile-settings-card {
+  margin: 1.5rem;
+  overflow: hidden;
 
-  .action-link {
+  .profile-setting-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.2rem;
     font-size: 1rem;
-    color: $color-text;
     text-decoration: none;
-    background-color: $color-white;
-    padding: 0.6rem 1.2rem;
-    border-radius: 6px;
-    width: 200px;
-    text-align: center;
-    border-top: 1px solid $color-line;
+    border-bottom: 1px solid lightgray;
 
+    &:last-child {
+      border-bottom: none;
+    }
+    span:hover{
+      color: #495837;
+    }
+    i {
+      color: grey;
+      font-size: 0.9rem;
+    }
   }
 }
