MBA-54 edit-profile page

--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,6 +1,6 @@
 .item-card {
-  flex: 0 0 auto; /* Prevent shrinking and ensure cards maintain their size */
-  width: 150px; /* Set a fixed width for each card */
+  flex: 0 0 auto; 
+  width: 150px; 
   background: white;
   border-radius: 10px;
   padding: 10px;
