--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@ Table of Contents
 9. Grid Layout
 10. Content
 11. Reviews
+12. Edit Profile
 */
 
 /* 1. Variables =================== */
@@ -45,3 +46,6 @@ Table of Contents
 
 /* 11. Reviews =================== */
 @import "components/reviews";
+
+/* 12. Edit Profile =============== */
+@import "base/edit-profile";
