--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,6 +176,12 @@ video {
 }
 
 /* 6. Media Queries =============== */
+.explore_top img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
 /* 7. Elements =============== */
 .filter-rent-and-buy {
   width: 100%;
@@ -239,6 +245,9 @@ video {
   width: 100%;
 }
 
+.profile-header {
+  position: relative;
+}
 .profile-header .profile-background img {
   width: 100%;
   height: 100px;
@@ -256,6 +265,28 @@ video {
   border-radius: 100%;
   width: 100px;
   height: 100px;
+  border: 1px solid black;
+}
+.profile-header .edit-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+  color: white;
+}
+.profile-header .profile-info-edit {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.profile-header .profile-info-edit .profile-img-edit {
+  flex-shrink: 0;
+  margin-top: -50px;
+}
+.profile-header .profile-info-edit img {
+  border-radius: 100%;
+  width: 120px;
+  height: 120px;
   border: 1px solid black;
 }
 .profile-header .rating {
@@ -315,13 +346,12 @@ video {
 .profile-header .profile-btns .contract {
   flex: 0 0 calc(20% - 0.25rem);
 }
-
-.logout-section {
+.profile-header .logout-section {
   display: flex;
   justify-content: center;
   margin: 2rem 0;
 }
-.logout-section .logout-btn {
+.profile-header .logout-section .logout-btn {
   background-color: #5b6d45;
   color: white;
   border: none;
@@ -330,8 +360,64 @@ video {
   border-radius: 8px;
   cursor: pointer;
 }
-.logout-section .logout-btn:hover {
+.profile-header .logout-section .logout-btn:hover {
   background-color: #495837;
+}
+.profile-header form {
+  display: flex;
+  flex-direction: column;
+  font-style: "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  margin: 1.5rem;
+}
+.profile-header form label {
+  font-size: 0.9rem;
+  margin: 0.2rem;
+}
+.profile-header form input {
+  padding: 0.7rem;
+  border-radius: 0.5rem;
+  border: 1px solid #CFCFCF;
+  margin-bottom: 0.7rem;
+}
+.profile-header form button {
+  color: white;
+  background-color: #556C40;
+  border-radius: 0.5rem;
+  text-align: center;
+  padding: 0.7rem;
+  margin: 4rem 0 2rem 0;
+}
+
+.explore_top {
+  position: relative;
+}
+.explore_top .p_name {
+  position: absolute;
+  top: 0;
+  margin: 1rem;
+  color: white;
+  font-size: 1.5rem;
+}
+.explore_top .p_description {
+  position: absolute;
+  bottom: 0;
+  margin: 1rem;
+  color: white;
+  font-size: 0.75rem;
+  width: 15rem;
+}
+.explore_top a {
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+  margin: 1rem;
+  padding: 0.2rem;
+  background-color: white;
+  border-radius: 1rem;
+  width: 4rem;
+  text-align: center;
+  cursor: pointer;
 }
 
 /* 8. Cards ======================= */
@@ -410,7 +496,6 @@ video {
   text-decoration: underline;
 }
 
-<<<<<<< HEAD
 .profile-settings-card {
   margin: 1.5rem;
   overflow: hidden;
@@ -433,7 +518,8 @@ video {
 .profile-settings-card .profile-setting-link i {
   color: grey;
   font-size: 0.9rem;
-=======
+}
+
 /* 11. Reviews =================== */
 .listings .section-header a {
   color: black;
@@ -482,5 +568,4 @@ video {
   font-size: 10px;
   color: #333;
   margin: 0;
->>>>>>> dev
 }/*# sourceMappingURL=style.css.map */
