--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -76,11 +76,10 @@
 }
 
 
-
 // profile - user image, info
 
 .profile-header {
-  // position: relative;
+  position: relative;
 
   .profile-background {
     img {
@@ -103,6 +102,32 @@
       border-radius: 100%;
       width: 100px;
       height: 100px;
+      border: 1px solid black;
+    }
+  }
+
+  .edit-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 1rem;
+    color: $color-white;
+  }
+
+  .profile-info-edit {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
+    .profile-img-edit {
+      flex-shrink: 0;
+      margin-top: -50px;
+    }
+
+    img {
+      border-radius: 100%;
+      width: 120px;
+      height: 120px;
       border: 1px solid black;
     }
   }
@@ -180,25 +205,89 @@
   }
 
 
-.logout-section {
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
+  .logout-section {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0;
 
-  .logout-btn {
-    background-color: #5b6d45;
-    color: white;
-    border: none;
-    padding: 0.8rem 2rem;
+    .logout-btn {
+      background-color: #5b6d45;
+      color: white;
+      border: none;
+      padding: 0.8rem 2rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #495837;
+      }
+    }
+  }
+
+  // edit Profile Form
+  form {
+    display: flex;
+    flex-direction: column;
+    font-style: $font-body;
     font-size: 1rem;
-    border-radius: 8px;
-    cursor: pointer;
+    margin: 1.5rem;
 
-    &:hover {
-      background-color: #495837;
+    label {
+      font-size: .9rem;
+      margin: .2rem;
+    }
+
+    input {
+      padding: .7rem;
+      border-radius: .5rem;
+      border: 1px solid $color-line;
+      margin-bottom: .7rem;
+    }
+
+    button {
+      color: $color-white;
+      background-color: $color-primary;
+      border-radius: .5rem;
+      text-align: center;
+      padding: .7rem;
+      margin: 4rem 0 2rem 0;
+
     }
   }
 }
 
 
+.explore_top {
+  position: relative;
+
+  .p_name {
+    position: absolute;
+    top: 0;
+    margin: 1rem;
+    color: $color-white;
+    font-size: 1.5rem;
+  }
+
+  .p_description {
+    position: absolute;
+    bottom: 0;
+    margin: 1rem;
+    color: $color-white;
+    font-size: .75rem;
+    width: 15rem;
+  }
+
+  a {
+    position: absolute;
+    bottom: 0;
+    right: 1rem;
+    margin: 1rem;
+    padding: .2rem;
+    background-color: $color-white;
+    border-radius: 1rem;
+    width: 4rem;
+    text-align: center;
+    cursor: pointer;
+  }
 }
