--- a/src/sass/base/_footer.scss
+++ b/src/sass/base/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
     background-color: $color-primary;
     padding: 0.5rem 0;
-    position: relative;
     width: 100%;
     bottom: 0;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    position: sticky;
 }
   
 .nav-footer {
