--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -3,6 +3,8 @@
     color: $color-white;
     padding: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
   
     .header-top {
       display: flex;
@@ -33,7 +35,7 @@
       .header-icons {
         display: flex;
         align-items: center;
-        gap: 2rem;
+        gap: 1.7rem;
         margin-top: 0.5rem;
         margin-right: 1rem;
   
@@ -49,17 +51,12 @@
   
     .search-bar {
       margin-top: 1rem;
-      padding: 0 1rem;
-  
       input {
         width: 100%;
-        padding: 0.75rem 1rem;
-        border: none;
-        border-radius: 10px;
+        padding: 0.5rem 1rem;
+        border-radius: 999px;
+        border: 1px solid #ccc;
         font-size: 1rem;
-        font-family: $font-body;
-        background-color: $color-white;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
     }
 }
