--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -13,17 +13,19 @@ body {
   color: $color-text;
   font-size: 1rem;
   line-height: 1.5;
-
+  
 }
 
 .page-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
 }
 
 .main-content {
     flex: 1;
+    padding: 10px;
 }
   
 ul,
