--- a/src/views/partials/editprofileheader.ejs
+++ b/src/views/partials/editprofileheader.ejs
@@ -1,6 +1,8 @@
 <header class="header">
     <div class="header-bar">
-        <span class="fa back-arrow">&#8592;</span>
+        <a href="/profile">
+            <span class="fa back-arrow">&#8592;</span>
+        </a>
         <span class="header-title">Edit Profile</span>
       </div>      
 </header>
