--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ Table of Contents
 10. Content
 11. Reviews
 12. Edit Profile
+13. Onboarding
 */
 /* 1. Variables =================== */
 /* 2. Reset ======================= */
@@ -126,7 +127,7 @@ video {
 .footer {
   background-color: #556C40;
   padding: 0.5rem 0;
-  position: relative;
+  position: sticky;
   width: 100%;
   bottom: 0;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
@@ -418,6 +419,24 @@ video {
   cursor: pointer;
 }
 
+.logout-section {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
+.logout-section .logout-btn {
+  background-color: #5b6d45;
+  color: white;
+  border: none;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.logout-section .logout-btn:hover {
+  background-color: #495837;
+}
+
 /* 8. Cards ======================= */
 .item-card {
   flex: 0 0 auto;
@@ -493,7 +512,6 @@ video {
 .listings .section-header a:hover {
   text-decoration: underline;
 }
-
 
 .headerEP {
   display: flex;
@@ -678,4 +696,109 @@ body {
 }
 .main form button:hover {
   background-color: #3c4c2d;
+}
+
+/* 13. Onboarding =============== */
+.onboarding-container {
+  width: 100%;
+  max-width: 600px;
+  height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #eaefe7;
+  text-align: center;
+}
+
+.top-svg {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.onboarding-slide {
+  display: none;
+  flex-direction: column;
+  animation: fadeIn 0.4s ease-in-out;
+}
+
+.onboarding-slide.active {
+  display: flex;
+}
+
+.slide-image {
+  margin-top: -7rem;
+  width: 500px;
+  height: auto;
+  margin-bottom: 2rem;
+}
+
+h2 {
+  font-size: 1.4rem;
+  color: #556C40;
+}
+
+h3 {
+  font-size: 1.2rem;
+  color: #556C40;
+  font-weight: 400;
+  margin-bottom: 0.3rem;
+}
+
+p {
+  font-size: 1.1rem;
+  padding: 1rem;
+  margin-bottom: 0.7rem;
+}
+
+.dot-indicator {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
+}
+.dot-indicator span {
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin: 0 4px;
+  transition: background-color 0.3s ease;
+}
+.dot-indicator span.active {
+  background-color: #556C40;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.pagination button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.pagination button img {
+  width: 55px;
+  height: 55px;
+}
+
+.skip-link {
+  display: block;
+  margin-top: 0.5rem;
+  color: black;
+  font-weight: 200;
+  font-size: 1.1rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }/*# sourceMappingURL=style.css.map */
