--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -292,3 +292,23 @@
     cursor: pointer;
   }
 }
+
+.logout-section {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+
+  .logout-btn {
+    background-color: #5b6d45;
+    color: white;
+    border: none;
+    padding: 0.8rem 2rem;
+    font-size: 1rem;
+    border-radius: 8px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #495837;
+    }
+  }
+}
