--- a/src/sass/base/_footer.scss
+++ b/src/sass/base/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: $color-primary;
     padding: 0.5rem 0;
-    position: relative;
+    position: sticky;
     width: 100%;
     bottom: 0;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
