--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@ Table of Contents
 10. Content
 11. Reviews
 12. Edit Profile
+13. Onboarding
 */
 
 /* 1. Variables =================== */
@@ -49,3 +50,6 @@ Table of Contents
 
 /* 12. Edit Profile =============== */
 @import "base/edit-profile";
+
+/* 13. Onboarding =============== */
+@import "components/onboarding";
