MBA-55 onboarding fixed

--- a/src/views/onboarding/onboardLayout.ejs
+++ b/src/views/onboarding/onboardLayout.ejs
@@ -36,10 +36,11 @@
       description: 'Verified users, built-in messaging, and safe payments make it easy to lend, rent, and sell.',
       index: 2
     }) %>
-
-    <div class="pagination">
-      <button id="prev"><img src="/images/left-arrow.svg" alt="Previous" /></button>
-      <button id="next"><img src="/images/right-arrow.svg" alt="Next" /></button>
+    <div class="pagination-wrapper">
+      <div class="pagination">
+        <button id="prev"><img src="/images/left-arrow.svg" alt="Previous" /></button>
+        <button id="next"><img src="/images/right-arrow.svg" alt="Next" /></button>
+      </div>
     </div>
 
     <a href="/" class="skip-link">Skip</a>
