--- a/public/css/style.css
+++ b/public/css/style.css
@@ -728,10 +728,21 @@ body {
 }
 
 .slide-image {
-  margin-top: -7rem;
+  margin-top: -6rem;
   width: 500px;
   height: auto;
   margin-bottom: 2rem;
+}
+
+.slide-image-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.image3 .slide-image {
+  width: 350px;
+  margin-top: -8rem;
+  margin-bottom: 0.5rem;
 }
 
 h2 {
@@ -755,24 +766,34 @@ p {
 .dot-indicator {
   display: flex;
   justify-content: center;
-  margin: 1rem 0;
+  gap: 2rem;
+  margin: 1.5rem 0;
+  margin-bottom: 0.2rem;
 }
 .dot-indicator span {
   width: 10px;
   height: 10px;
-  background-color: #ccc;
+  background-color: #bbb;
   border-radius: 50%;
-  margin: 0 4px;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
 }
 .dot-indicator span.active {
+  width: 40px;
+  height: 10px;
+  border-radius: 999px;
   background-color: #556C40;
+}
+
+.pagination-wrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pagination {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+  gap: 4rem;
 }
 .pagination button {
   background: none;
@@ -785,11 +806,13 @@ p {
 }
 
 .skip-link {
-  display: block;
-  margin-top: 0.5rem;
+  position: absolute;
+  bottom: 3.5rem;
+  right: 2rem;
   color: black;
   font-weight: 200;
   font-size: 1.1rem;
+  text-decoration: underline;
 }
 
 @keyframes fadeIn {
