--- a/src/sass/components/_onboarding.scss
+++ b/src/sass/components/_onboarding.scss
@@ -19,8 +19,6 @@
 .onboarding-slide {
   display: none;
   flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
   animation: fadeIn 0.4s ease-in-out;
 }
 
@@ -29,10 +27,19 @@
 }
 
 .slide-image {
-  margin-top: -7rem;
+  margin-top: -6rem;
   width: 500px;
   height: auto;
   margin-bottom: 2rem;
+}
+.slide-image-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.image3 .slide-image{
+  width: 350px;
+  margin-top: -8rem;
+  margin-bottom: 0.5rem;
 }
 
 h2 {
@@ -57,32 +64,43 @@ p {
 .dot-indicator {
   display: flex;
   justify-content: center;
-  margin: 1rem 0;
+  gap: 2rem;
+  margin: 1.5rem 0;
+  margin-bottom: 0.2rem;
 
   span {
     width: 10px;
     height: 10px;
-    background-color: #ccc;
+    background-color: #bbb;
     border-radius: 50%;
-    margin: 0 4px;
-    transition: background-color 0.3s ease;
-
-    &.active {
-      background-color: #556C40;
-    }
+    transition: all 0.3s ease;
   }
+
+  span.active {
+    width: 40px;
+    height: 10px;
+    border-radius: 999px;
+    background-color: #556C40;
+  }
+}
+
+
+.pagination-wrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pagination {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
-  
+  gap: 4rem;
 
   button {
     background: none;
     border: none;
     cursor: pointer;
+
     img {
       width: 55px;
       height: 55px;
@@ -91,13 +109,16 @@ p {
 }
 
 .skip-link {
-  display: block;
-  margin-top: 0.5rem;
-  
+  position: absolute;
+  bottom: 3.5rem;
+  right: 2rem;
   color: black;
   font-weight: 200;
   font-size: 1.1rem;
+  text-decoration: underline;
 }
+
+
 
 @keyframes fadeIn {
   from {
