--- a/src/views/onboarding/slide.ejs
+++ b/src/views/onboarding/slide.ejs
@@ -1,5 +1,8 @@
 <div class="onboarding-slide">
-  <img class="slide-image" src="<%= slideImage %>" alt="Slide Image" />
+  <div class="slide-image-wrapper <%= index === 2 ? 'image3' : '' %>">
+    <img class="slide-image" src="<%= slideImage %>" alt="Slide Image" />
+  </div>
+
   <h2><%= title %></h2>
   <h3><%= subtitle %></h3>
   <p><%= description %></p>
