--- a/src/sass/components/_onboarding.scss
+++ b/src/sass/components/_onboarding.scss
@@ -42,24 +42,31 @@
   margin-bottom: 0.5rem;
 }
 
-h2 {
-  font-size: 1.4rem;
-  color: #556C40;
-  
+.slide-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1rem;
+
+  h2 {
+    font-size: 1.4rem;
+    color: #556C40;
+    margin-bottom: 0.3rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+    color: #556C40;
+    font-weight: 400;
+    margin-bottom: 0.3rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+    margin-bottom: 0.7rem;
+  }
 }
 
-h3 {
-  font-size: 1.2rem;
-  color: #556C40;
-  font-weight: 400;
-  margin-bottom: 0.3rem;
-}
-
-p {
-  font-size: 1.1rem;
-  padding: 1rem;
-  margin-bottom: 0.7rem;
-}
 
 .dot-indicator {
   display: flex;
