--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,8 @@ Table of Contents
 10. Content
 11. Reviews
 12. Edit Profile
+13. Add Profile Photo
+14. Terms & Conditions
 */
 
 /* 1. Variables =================== */
@@ -49,3 +51,9 @@ Table of Contents
 
 /* 12. Edit Profile =============== */
 @import "base/edit-profile";
+
+/* 13. Add Profile Photo ========== */
+@import "components/addprofilephoto";
+
+/* 14. Terms & Conditions ========== */
+@import "components/terms";
