--- a/src/views/onboarding/slide.ejs
+++ b/src/views/onboarding/slide.ejs
@@ -1,8 +1,13 @@
 <div class="onboarding-slide">
-  <img class="slide-image" src="<%= slideImage %>" alt="Slide Image" />
-  <h2><%= title %></h2>
-  <h3><%= subtitle %></h3>
-  <p><%= description %></p>
+  <div class="slide-image-wrapper <%= index === 2 ? 'image3' : '' %>">
+    <img class="slide-image" src="<%= slideImage %>" alt="Slide Image" />
+  </div>
+
+  <div class="slide-text">
+    <h2><%= title %></h2>
+    <h3><%= subtitle %></h3>
+    <p><%= description %></p>
+  </div>
 
   <div class="dot-indicator">
     <span class="<%= index === 0 ? 'active' : '' %>"></span>
