--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,8 +69,9 @@ video {
 .header {
   background-color: #556C40;
   color: white;
-  padding: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem 1rem 3rem;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
 }
 .header .header-top {
   display: flex;
@@ -696,4 +697,109 @@ body {
 }
 .main form button:hover {
   background-color: #3c4c2d;
+}
+
+/* 13. Onboarding =============== */
+.onboarding-container {
+  width: 100%;
+  max-width: 600px;
+  height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #eaefe7;
+  text-align: center;
+}
+
+.top-svg {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.onboarding-slide {
+  display: none;
+  flex-direction: column;
+  animation: fadeIn 0.4s ease-in-out;
+}
+
+.onboarding-slide.active {
+  display: flex;
+}
+
+.slide-image {
+  margin-top: -7rem;
+  width: 500px;
+  height: auto;
+  margin-bottom: 2rem;
+}
+
+h2 {
+  font-size: 1.4rem;
+  color: #556C40;
+}
+
+h3 {
+  font-size: 1.2rem;
+  color: #556C40;
+  font-weight: 400;
+  margin-bottom: 0.3rem;
+}
+
+p {
+  font-size: 1.1rem;
+  padding: 1rem;
+  margin-bottom: 0.7rem;
+}
+
+.dot-indicator {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0;
+}
+.dot-indicator span {
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin: 0 4px;
+  transition: background-color 0.3s ease;
+}
+.dot-indicator span.active {
+  background-color: #556C40;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.pagination button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.pagination button img {
+  width: 55px;
+  height: 55px;
+}
+
+.skip-link {
+  display: block;
+  margin-top: 0.5rem;
+  color: black;
+  font-weight: 200;
+  font-size: 1.1rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }/*# sourceMappingURL=style.css.map */
