--- a/src/sass/components/_onboarding.scss
+++ b/src/sass/components/_onboarding.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   background-color: #eaefe7;
   text-align: center;
+  position: relative;
 }
 
 .top-svg {
@@ -20,38 +21,31 @@
   display: none;
   flex-direction: column;
   animation: fadeIn 0.4s ease-in-out;
-}
 
-.onboarding-slide.active {
-  display: flex;
-}
+  &.active {
+    display: flex;
+  }
 
-.slide-image {
-  margin-top: -6rem;
-  width: 500px;
-  height: auto;
-  margin-bottom: 2rem;
-}
-.slide-image-wrapper {
+ .slide-image-wrapper {
   display: flex;
   justify-content: center;
-}
-.image3 .slide-image{
-  width: 350px;
-  margin-top: -8rem;
-  margin-bottom: 0.5rem;
+  margin-top: -7rem;
 }
 
-.slide-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 1rem;
+.image3 .slide-image {
+  width: 350px;
+  margin-top: -4rem;
+}
+
+
+  .slide-image {
+    width: 500px;
+    height: auto;
+  }
 
   h2 {
     font-size: 1.4rem;
     color: #556C40;
-    margin-bottom: 0.3rem;
   }
 
   h3 {
@@ -63,45 +57,44 @@
 
   p {
     font-size: 1.1rem;
+    padding: 1rem;
     margin-bottom: 0.7rem;
   }
 }
 
-
 .dot-indicator {
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  align-items: center;
+  gap: 0.75rem;
   margin: 1.5rem 0;
-  margin-bottom: 0.2rem;
 
-  span {
+  .dot {
     width: 10px;
     height: 10px;
     background-color: #bbb;
     border-radius: 50%;
     transition: all 0.3s ease;
-  }
 
-  span.active {
-    width: 40px;
-    height: 10px;
-    border-radius: 999px;
-    background-color: #556C40;
+    &.active {
+      width: 40px;
+      height: 10px;
+      border-radius: 999px;
+      background-color: #556C40;
+    }
   }
 }
 
 
 .pagination-wrapper {
-  flex-grow: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .pagination {
   display: flex;
-  gap: 4rem;
+  justify-content: space-between;
+  gap: 5rem;
 
   button {
     background: none;
@@ -116,16 +109,15 @@
 }
 
 .skip-link {
-  position: absolute;
-  bottom: 3.5rem;
-  right: 2rem;
+  display: block;
   color: black;
   font-weight: 200;
   font-size: 1.1rem;
   text-decoration: underline;
+  margin-bottom: 3rem;
+  align-self: flex-end;
+  padding-right: 3rem;
 }
-
-
 
 @keyframes fadeIn {
   from {
