--- a/src/views/onboarding/slide.ejs
+++ b/src/views/onboarding/slide.ejs
@@ -1,4 +1,4 @@
-<div class="onboarding-slide">
+<div class="onboarding-slide <%= index === 0 ? 'active' : '' %>" >
   <div class="slide-image-wrapper <%= index === 2 ? 'image3' : '' %>">
     <img class="slide-image" src="<%= slideImage %>" alt="Slide Image" />
   </div>
@@ -9,9 +9,5 @@
     <p><%= description %></p>
   </div>
 
-  <div class="dot-indicator">
-    <span class="<%= index === 0 ? 'active' : '' %>"></span>
-    <span class="<%= index === 1 ? 'active' : '' %>"></span>
-    <span class="<%= index === 2 ? 'active' : '' %>"></span>
-  </div>
+  
 </div>
