--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -1,9 +1,10 @@
 .header {
   background-color: #556C40;
   color: white;
-  padding: 1.5rem 1rem 3rem;
-  border-bottom-left-radius: 2rem;
-  border-bottom-right-radius: 2rem;
+  &.curved {
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+  }
 
   .header-top {
     display: flex;
