--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -4,5 +4,6 @@ $color-primary-light: #8D9D7F;
 $color-line: #CFCFCF;
 $color-text: black;
 $color-white: white;
+$color-red: #ff2f32;
 
 $font-body: 'Helvetica Neue', Arial, sans-serif;
