skip link changed

--- a/src/views/onboarding/onboardLayout.ejs
+++ b/src/views/onboarding/onboardLayout.ejs
@@ -47,7 +47,7 @@
       <span class="dot"></span>
     </div>
     
-    <a href="/" class="skip-link">Skip</a>
+    <a href="/login" class="skip-link">Skip</a>
   </div>
 </body>
 </html>
