MBA-42 interests view and notifications view

--- a/src/sass/components/_addprofilephoto.scss
+++ b/src/sass/components/_addprofilephoto.scss
@@ -1,91 +1,84 @@
 .add-profile-photo-page {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    .container {
-      text-align: center;
-      position: relative;
-      width: 100%;
-      max-width: 400px;
-      padding: 20px;
-    }
-  
-    .skip {
-      position: absolute;
-      top: 0px;
-      right: 20px;
-  
-      a {
-        text-decoration: none;
-        color: black;
-        font-size: 14px;
-  
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  
-    .page-title {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      color: #333;
-    }
-  
-    .photo-icon {
-      margin: 20px auto 30px;
-  
-      .circle {
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        background-color: #ddd;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-  
-        i {
-          font-size: 32px;
-          color: #555;
-        }
-      }
-    }
-  
-    button {
-      display: block;
-      width: 100%;
-      max-width: 300px;
-      padding: 12px;
-      margin: 10px auto;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-  
-      &.add-photo {
-        background-color: $color-primary;
-        color: white;
-  
-        &:hover {
-          background-color: $color-primary-light;
-        }
-      }
-  
-      &.continue {
-        background-color: gray;
-        color: white;
-  
-        &:hover {
-          background-color: darkgray;
-        }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .container {
+    text-align: center;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+  }
+
+  .skip {
+    position: absolute;
+    top: -80px;
+    right: 20px;
+
+    a {
+      text-decoration: none;
+      color: black;
+      font-size: 14px;
+
+      &:hover {
+        text-decoration: underline;
       }
     }
   }
+
+  .page-title {
+    font-size: 34px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: #333;
+  }
+
+  .photo-icon {
+    margin: 20px auto 50px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg, img {
+      width: 200px;
+      height: 200px;
+    }
+  }
+
+  button {
+    display: block;
+    width: 100%;
+    max-width: 300px;
+    padding: 12px;
+    margin: 20px auto; 
+    font-size: 16px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+
+    &.add-photo {
+      background-color: $color-primary;
+      color: white;
+
+      &:hover {
+        background-color: $color-primary-light;
+      }
+    }
+
+    &.continue {
+      background-color: $color-light;
+      color: black;
+      border: 1px solid black;
+
+      &:hover {
+        background-color: $color-line;
+      }
+    }
+  }
+}
