--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -61,3 +61,9 @@ Table of Contents
 
 /* 15. Onboarding =============== */
 @import "components/onboarding";
+
+/* 16. Interests ================== */
+@import "components/interests";
+
+/* 17. Notifications =========== */
+@import "components/notifications";
