--- a/src/views/profile/addprofilephoto.ejs
+++ b/src/views/profile/addprofilephoto.ejs
@@ -22,9 +22,7 @@
     <h1 class="page-title">Add Profile Photo</h1>
 
     <div class="photo-icon">
-      <div class="circle">
-        <i class="fas fa-camera"></i>
-      </div>
+        <img src="/images/camera.svg" alt="Camera Icon" width="48" height="48">
     </div>
 
     <button class="add-photo">Add Photo</button>
