--- a/src/sass/components/_terms.scss
+++ b/src/sass/components/_terms.scss
@@ -23,15 +23,15 @@
   
       a {
         text-decoration: none;
-        color: #007bff;
-        font-size: 18px;
+        color: black;
+        font-size: 30px;
   
         i {
           font-size: 24px;
         }
   
         &:hover {
-          color: #0056b3;
+          color: darkslategray;
         }
       }
   
