--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -17,7 +17,7 @@
 
       <div class="login-content">
         <div class="login_logo">
-          <img src="/logo.png" alt="Lend It Out Logo" class="logo">
+          <img src="/images/logo.png" alt="Lend It Out Logo" class="logo">
         </div>
 
         <div class="login-form">
