--- a/src/views/auth/password-reset.ejs
+++ b/src/views/auth/password-reset.ejs
@@ -21,26 +21,20 @@
         </div>
 
         <div class="login-form">
-          <form action="/login" method="POST">
-            <input type="text" name="email" placeholder="Email" required>
-            <input type="text" name="username" placeholder="Username" required>
+          <form action="/auth/password-reset" method="POST">
+
+            <input type="text" name="email" hidden value="<%= email %>" />
+            <input type="text" name="code" hidden value="<%= code %>" />
             <input type="password" name="password" placeholder="Password" required>
-
-
-            <label for="agree" class="checkbox-label">
-              <input type="checkbox" id="agree" name="agree" class="checkbox" required>
-              <span>I agree to the <a href="/" class="underline">Terms of Service &amp; Privacy Policy</a></span>
-            </label>
-
 
             <% if(error) {%>
             <p class="error-msg"><%= error %></p>
             <%}%>
-            <button>Create Account</button>
+            <button>Password reset</button>
           </form>
 
           <div class="register-link">
-            Already have an account? <a href="/login" class="underline">Login</a>
+            Already have an account? <a href="/auth/login" class="underline">Login</a>
           </div>
         </div>
 
