--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,7 +322,7 @@ video {
 }
 .profile-header .profile-more-btn {
   margin: 0.3rem 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .profile-header .profile-btns {
   display: flex;
@@ -330,7 +330,7 @@ video {
   flex-wrap: nowrap;
   max-width: 600px;
   margin: 1rem auto;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   justify-content: center;
 }
 .profile-header .profile-btns button {
@@ -580,6 +580,59 @@ video {
 }
 .logout-section .logout-btn:hover {
   background-color: #495837;
+}
+
+.forgot-password2 {
+  position: fixed;
+  top: 26rem;
+  width: 93%;
+  height: 20rem;
+  padding: 2rem;
+  border-radius: 1rem;
+  display: flex;
+  background-color: #8D9D7F;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  font-size: 0.9rem;
+}
+.forgot-password2 .close-btn {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  font-size: 1rem;
+}
+.forgot-password2 p {
+  color: white;
+  text-align: center;
+}
+.forgot-password2 .codebox-group {
+  display: flex;
+  justify-content: center;
+  margin: 1.5rem 0;
+}
+.forgot-password2 .codebox-group input {
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #CFCFCF;
+  border-radius: 5px;
+  margin: 0 0.3rem;
+  text-align: center;
+}
+.forgot-password2 .resend-btn {
+  color: white;
+  background-color: #556C40;
+  border-radius: 0.5rem;
+  text-align: center;
+  padding: 0.5rem;
+  width: 8rem;
+  display: flex;
+  justify-content: center;
+  margin: 1rem auto;
+}
+
+.hidden {
+  display: none;
 }
 
 /* 8. Cards ======================= */
@@ -853,6 +906,7 @@ body {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-align: center;
 }
 .main form button:hover {
   background-color: #3c4c2d;
